--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ openpyxl==3.0.3
 passlib==1.7.2
 pastel==0.2.0
 pexpect==4.8.0
-Pillow==7.0.0
+Pillow>=8.1.1
 pipenv==2018.11.26
 pkginfo==1.5.0.1
 poetry==1.0.5
